--- a/otroMas.html
+++ b/otroMas.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>prueba de configuracion de git para trabajar con la banda </h1>
 </body>
 </html>
