--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1>
-<h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1>    
+<h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido a minecaraft</h1><h1>entretenimiento 24/7</h1>    
 </body>
 </html>
