--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido</h1>
-<h1>Bienvenido</h1><h1>Bienvenido</h1><h1>Bienvenido a minecaraft</h1><h1>entretenimiento 24/7</h1>    
+<h1>MINECRAFT</h1>    
 </body>
 </html>
