--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
 <h1>MINECRAFT</h1>    
+<h1>MINECRAFT</h1> 
+<h1>MINECRAFT</h1> 
+<h1>MINECRAFT</h1> 
+<var><h1>MINECRAFT</h1> </var>
 </body>
 </html>
