--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-<h1>MINECRAFT</h1>    
-<h1>MINECRAFT</h1> 
-<h1>MINECRAFT</h1> 
-<h1>MINECRAFT</h1> 
-<var><h1>MINECRAFT</h1> </var>
+<style>body{ background-color: blue};</style>
+        
+    </body>
+<h1>MINECRAFT 1.19.31.
+    descarga gratuita
+    click en el enlace
+    https://www.mediafire.com/file/d878tnkf6wgl279/Minecraft-1.19.31.01.apk/file
+</h1>    
 </body>
 </html>
