--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>La vida entre bloques></title>
+    <style>
+        body {
+            background: rgb(76, 0, 255);
+        }
+    </style>
 </head>
 <body>
-<h1>MINECRAFT</h1>    
-<h1>MINECRAFT</h1> 
-<h1>MINECRAFT</h1> 
-<h1>MINECRAFT</h1> 
-<var><h1>MINECRAFT</h1> </var>
+<h6>MINECRAFT</h6>    
+<h2>MINECRAFT <style> {::backdrop :read-only}</style></h2> 
+<h3>MINECRAFT</h3> 
+<h4>MINECRAFT</h4> 
+<var><h1>Deivis puto
+
+
+</h1> </var>
+<p>un nuevo mundo lleno de aventuras gracias a la tecnología
+</p>
+<a href="https://www.minecraft.net/es-es">minecraft</a>
+<img src="096fbe5269d2fae069305fe2742d5be5" width="200px" height="200px">
+
+<img src="150px-Cow.ico" width="200px" height="200px">
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque qui excepturi ab quaerat? Accusantium pariatur nam quasi provident molestias facilis modi tempora error sint ullam, blanditiis, libero vero? Sequi, magni.</p>
 </body>
 </html>
