--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lo mejor de Minecraft</title>
 </head>
 <body>
-<style>body{ background-color: blue};</style>
+<style>body{ background-color: rgba(185, 14, 8, 0.575)};</style>
         
     </body>
 <h1>MINECRAFT 1.19.31.
     descarga gratuita
     click en el enlace
-    https://www.mediafire.com/file/d878tnkf6wgl279/Minecraft-1.19.31.01.apk/file
-</h1>    
+    <h4>  </h4>
+    <a href="https://www.mediafire.com/file/d878tnkf6wgl279/Minecraft-1.19.31.01.apk/file">descragar MINECRAFT</a>
+    <br><br><br><br><br><br><br><br>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea dicta dolores nemo repudiandae labore cumque cupiditate iure doloribus culpa, pariatur quam possimus error? Doloremque non, repellendus voluptates est adipisci quibusdam.</p>
+    <p>MINECRAFT clasisco mundo de cubitos que entretiene a cualquier pendejo y hace que se divierta y pierda muchas hporas de su vida</p>
+    
+    <img src="wallhaven-yx788d.jpg" whide="200px" height="200px ">
 </body>
 </html>
